--- a/views/bookings_scheduler.erb
+++ b/views/bookings_scheduler.erb
@@ -8,7 +8,7 @@
 				right: 'month,agendaWeek,agendaDay'
 			},
 			editable: true,
-			events: '/booking/scheduler',
+			events: '/api/booking/scheduler',
 			eventClick: function(event) {
                if (event.url) {
                  window.open(event.url);
