--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -472,6 +472,10 @@
 
         </div>	  
 
+        <div id="checking-availability" title="<%=t.new_booking.checking_availability%>" style="display:none">
+          <img src="/img/ajax-loader_grande.gif"/>
+        </div>
+
         <div id="sending-booking" title="<%=t.new_booking.sending_booking_request%>" style="display:none">
           <img src="/img/ajax-loader_grande.gif"/>
         </div>
