--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -71,7 +71,10 @@
        allow_custom_pickup_place : bookingDataSystem.allow_custom_pickup_place,
        return_places : bookingDataSystem.return_places,
        allow_custom_return_place : bookingDataSystem.allow_custom_pickup_place,
-       process_states : [ 'item_selection', 
+       process_states : [ 
+         'item_selection', 
+         'checking_availability',
+         'availability_checked',
          'extras_selection',
          'completing_booking', 
          'pay_booking', 
@@ -80,6 +83,7 @@
          'process_finished', 
          'process_error' ],
        process_state : 'item_selection',
+       categoriesAvailable: [],
        confirmBookingResponse : null, /* It holds the confirm booking response */       
        booking : {
 
@@ -240,7 +244,15 @@
        	  	 case 'start' :
        	  	   this.process_state = 'item_selection';
        	  	   break;
-       	  	       	 
+       	
+             case 'check_availability':
+               this.process_state = 'checking_availability';
+               break;
+
+             case 'check_availability_finished':
+               this.process_state = 'availability_checked';
+               break;
+
              case 'select_item' :
                 this.process_state = "extras_selection";
                 break;
@@ -290,6 +302,42 @@
        
          bookingView.update_information('booking_item');
        	
+       },
+
+       /* Check availability */
+       
+       check_availability: function(date_from, time_from, date_to, time_to, pickup_place, return_place) {
+
+
+          var from = date_from.toString("yyyy-MM-dd");
+          var to = date_to.toString("yyyy-MM-dd");
+
+          this.change_state('check_availability');
+
+          $.ajax( 
+                 {
+                   type : 'GET',
+                   url : '/api/booking/availability?from='+from+'&to='+to,
+                   dataType: 'json',
+                   contentType: 'application/json; charset=utf-8', 
+                                       
+                   success : function(data, textStatus, jqXHR) { /* RESPONSE OK */
+                     bookingModel.categoriesAvailable = data;
+                     bookingModel.calculate_price(date_from, time_from, date_to, time_to, pickup_place, return_place);
+                     bookingView.show_prices();
+                     bookingModel.change_state('check_availability_finished');
+                   }, 
+                   
+                   error: function(jqXHR, textStatus, errorThrow){ /* RESPONSE ERROR */
+                     bookingModel.categoriesAvailable = [];
+                     bookingModel.calculate_price(date_from, time_from, date_to, time_to, pickup_place, return_place);
+                     bookingView.show_prices();
+                     bookingModel.change_state('check_availability_finished');
+                   }
+                   
+                 });    
+      
+
        },
 
        /* The business logic of calculating prices */
@@ -475,8 +523,9 @@
           _gaq.push(['_trackEvent', 'Reservations', 'Show prices', date_from.toString("dd-MM-yyyy") + ' ' + date_to.toString("dd-MM-yyyy")]);
         }
       	
-        bookingModel.calculate_price(date_from, time_from, date_to, time_to, pickup_place, return_place);
-      	bookingView.show_prices();
+        bookingModel.check_availability(date_from, time_from, date_to, time_to, pickup_place, return_place);
+        //bookingModel.calculate_price(date_from, time_from, date_to, time_to, pickup_place, return_place);
+      	//bookingView.show_prices();
       },	
     
       /* start booking */
@@ -742,6 +791,11 @@
        	 $('#return_place_value').val($('#return_place option:selected').text());  
        	      	       	
        	 // Configure the dialog(s)
+         $('#checking-availability').dialog({autoOpen: false, height: 260, modal: true,
+              closeOnEscape: false,
+               open: function(event, ui) { $(".ui-dialog-titlebar-close").hide(); },
+               close: function(event, ui) { $(".ui-dialog-titlebar-close").show(); }
+             });
        	 $('#sending-booking').dialog({autoOpen: false, height: 260, modal: true,
        	      closeOnEscape: false,
        	       open: function(event, ui) { $(".ui-dialog-titlebar-close").hide(); },
@@ -1054,24 +1108,33 @@
       	            '<div class="car_detail_description"><span class="car_family_description" itemprop="name">'+bookingDataSystem.families[family].description+'</span></div>' +
       	            '<div class="car_detail_cars"><span class="car_family_cars" itemprop="description">'+bookingDataSystem.families[family].cars+'</span></div>'+
       	          '</div>';
-     	   if (bookingDataSystem.optionals) {
+     	     if (bookingDataSystem.optionals) {
       	     content += '<div class="grid_6">';
              for (var option in bookingDataSystem.optionals) {
+              var buttonSelect = '<input type="button" class="form-button book-button" id="button_start_booking_'+family+'" value="<%=t.new_booking.booking%>" rel="'+family+'" data-optional="'+ option + '" />';
+              var available = (bookingModel.categoriesAvailable.indexOf(family) > - 1) ? buttonSelect : '<span class="booking-not-available"><%=t.new_booking.not_available%></span>';
              	content += 
              	  '<div class="car_price_optional" itemprop="offers" itemscope itemtype="http://schema.org/Offer">'+
              	    '<div class="car_price_optional_text" itemprop="name">' + bookingDataSystem.optionals[option].name + '</div>' +
                     '<div class="car_price_total"><span itemprop="price">' + prices[family][option].toFixed(bookingDataSystem.configuration.roundDecimals || 0) + '€' + '</span></div>' +
-                    '<div class="car_price_booking"><input type="button" class="form-button book-button" id="button_start_booking_'+family+'" value="<%=t.new_booking.booking%>" rel="'+family+'" data-optional="'+ option + '" /></div>' +     	          
+                    '<div class="car_price_booking top-margin">' +
+                    available +
+                    '</div>' +     	          
       	          '</div>';
              }
              content += '</div>' + 
                 '</div>';
       	   }
       	   else {      
-    	     content += '<div class="grid_6" itemprop="offers" itemscope itemtype="http://schema.org/Offer">'+
-                    '<div class="car_price_total"><span itemprop="price">'+prices[family].toFixed(bookingDataSystem.configuration.roundDecimals || 0) + '€' + '</span></div>' +
-                    '<div class="car_price_booking"><input type="button" class="form-button book-button" id="button_start_booking_'+family+'" value="<%=t.new_booking.booking%>" rel="'+family+'" /></div>' +     	          
-      	        '</div>'+
+    	     var buttonSelect = '<input type="button" class="form-button book-button" id="button_start_booking_'+family+'" value="<%=t.new_booking.booking%>" rel="'+family+'" />';
+           var available = (bookingModel.categoriesAvailable.indexOf(family) > - 1) ? buttonSelect : '<span class="booking-not-available"><%=t.new_booking.not_available%></span>';
+           content += 
+              '<div class="grid_6" itemprop="offers" itemscope itemtype="http://schema.org/Offer">'+
+                '<div class="car_price_total"><span itemprop="price">'+prices[family].toFixed(bookingDataSystem.configuration.roundDecimals || 0) + '€' + '</span></div>' +
+                '<div class="car_price_booking top-margin">' + 
+                  available + 
+                '</div>' +     	          
+      	      '</div>'+
       	      '</div>';
            }
       	      	     	
@@ -1261,6 +1324,14 @@
        	     this.load_return_places();
        	     break;
        	        
+           case 'checking_availability': /* Second state (checking availability) */
+             $('#checking-availability').dialog('open');
+             break;
+  
+           case 'availability_checked':
+             $('#checking-availability').dialog('close');
+             break;
+
            case 'extras_selection' : /* Second state (user choose an item and starts bookin) */
        	     this.update_information('booking_data');      	               	   
        	     this.load_items();
