--- a/views/console_booking.js.erb
+++ b/views/console_booking.js.erb
@@ -28,7 +28,7 @@ require(['jquery','charts','ysdtemplate'], function($, Chart, tmpl) {
 
   	   $.ajax({
   	   	       type: 'GET',
-  	   	       url : '/booking/statistics',
+  	   	       url : '/api/booking/statistics',
   	   	       contentType: 'application/json; charset=utf-8',
   		       dataType : 'json',
   		       success: function(data, textStatus, jqXHR) {
