--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -45,7 +45,12 @@
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings/scheduler"><%=t.booking_console.planning%></a></p>
     </div>
-  </div>  
+  </div>
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
+      <p class="centered_text"><a href="/admin/bookings/new"><%=t.booking_console.new_booking%></a></p>
+    </div>
+  </div>      
 </div>
 <script type="text/template" id="booking_data_table">
  <div class="table-container">
