--- a/views/reserva-finalizada.erb
+++ b/views/reserva-finalizada.erb
@@ -10,6 +10,8 @@
  </div>
  <div class="container_12">
    <div class="grid_12">
-      <%= partial(:booking_deposit, :locals => {:booking => booking, :booking_deposit => booking_deposit}) %>
+      <%= partial(:booking_deposit, :locals => {:booking => booking, 
+           :booking_deposit => booking_deposit,
+           :booking_allow_total_payment => booking_allow_total_payment}) %>
    </div>
  </div>
