--- a/views/reserva.erb
+++ b/views/reserva.erb
@@ -8,10 +8,11 @@
      <%= partial(:booking_price, :locals => {:booking => booking}) %>  
    </div>
  </div>
- <% if booking_payment and booking.total_pending > 0 %>
+ <% if booking_payment and ((booking_allow_total_payment and booking.total_pending > 0) or (booking_deposit > 0 and booking.total_paid == 0)) %>
  <div class="container_12">
    <div class="grid_12">
-   	  <%= partial(:booking_payment, :locals => {:booking => booking, :booking_deposit => booking_deposit, :booking_payment => booking_payment}) %>
+   	  <%= partial(:booking_payment, :locals => {:booking => booking, :booking_deposit => booking_deposit,
+       :booking_allow_total_payment => booking_allow_total_payment, :booking_payment => booking_payment}) %>
    </div>
  </div>
  <% end %>
