--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -37,6 +37,11 @@
     </div>
   </div>
   <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
+      <p class="centered_text"><a href="/admin/bookings/availability"><%=t.booking_console.availability%></a></p>
+    </div>
+  </div>       
+  <div class="grid_3">
     <div class="box box-shadow guiblock background-color-1"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings"><%=t.booking_console.reservations%></a></p>
     </div>     
