--- a/views/_reserva.erb
+++ b/views/_reserva.erb
@@ -1,5 +1,9 @@
+      <% if booking.expired? %>
+      <h2><%=t.booking.expired%></h2>      
+      <% else %>
       <h2><%=t.booking.title("#{t[:booking][:state][booking.status.to_sym]}".downcase)%></h2>
-      
+      <% end %>
+
       <div class="booking-message">
         <%= message %>
       </div>
