--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -1,15 +1,6 @@
 <h2><%=t.booking_console.title%></h2>
-<div class="container_12">
-  <div class="grid_8">
-    <div id="booking_statics">
-      <canvas id="booking_graphic" width="640" height="500"></canvas>
-    </div>
-  </div>
-  <div class="grid_4">
-    <div id="booking_data" class="guiblock smaller_text centered_text">
-    </div>
-  </div>
-</div>
+<%= partial(:pickedup_bookings) %>
+<%= partial(:returned_bookings) %>
 <div class="container_12">
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-1" style="padding: 3em">
@@ -55,26 +46,10 @@
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings/new"><%=t.booking_console.new_booking%></a></p>
     </div>
-  </div>      
+  </div>
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
+      <p class="centered_text"><a href="/admin/bookings/summary"><%=t.booking_console.summary%></a></p>
+    </div>
+  </div>         
 </div>
-<script type="text/template" id="booking_data_table">
- <div class="table-container">
-    <table id="elements_table" class="table">
-       <thead class="table-header">
-         <tr>
-           <th class="table-header-title centered_text" scope="col" style="width:20%"><%=t.booking_console.period%></th>
-           <th class="table-header-title centered_text" scope="col" style="width:40%"><%=t.booking_console.requested%></th>
-           <th class="table-header-title centered_text" scope="col" style="width:40%"><%=t.booking_console.confirmed%></th>
-         </tr>
-       </thead>
-       <tbody id="elements_tbody" class="table-tbody">  
-         <%% for (item in data) { %>          
-         <tr class="table-row"> 
-           <td class="table-cell"><%%=item%></td>
-           <td class="table-cell"><%%=data[item].requests%></td>
-           <td class="table-cell"><%%=data[item].confirmed%></td>
-         </tr>
-         <%% } %>
-       </tbody>
-    </table>
-</script>
