--- a/views/console_booking.js.erb
+++ b/views/console_booking.js.erb
@@ -1,80 +1,2 @@
-require(['jquery','charts','ysdtemplate'], function($, Chart, tmpl) {
-
-
-  bookingConsoleModel = {
-
-     result : null,
-
-     graphData : { labels   : [] ,
-                   datasets : [
-                     { 
-                 	   fillColor : "rgba(220, 220, 220, 0.5)",
-			           strokeColor : "rgba(220, 220, 220, 1)",
-			           pointColor : "rgba(220, 220, 220,1)",
-			           pointStrokeColor : "#fff",
-			           data : []
-			         },
-                     {
-			           fillColor : "rgba(151,187,205,0.5)",
-			           strokeColor : "rgba(151,187,205,1)",
-			           pointColor : "rgba(151,187,205,1)",
-			           pointStrokeColor : "#fff",
-			           data : []
-		             }			         
-                   ] 
-               },
-
-     loadData: function() {
-
-  	   $.ajax({
-  	   	       type: 'GET',
-  	   	       url : '/api/booking/statistics',
-  	   	       contentType: 'application/json; charset=utf-8',
-  		       dataType : 'json',
-  		       success: function(data, textStatus, jqXHR) {
-                  bookingConsoleModel.result = data;
-                  for (item in data) {
-                    bookingConsoleModel.graphData.labels.push(item);
-                    bookingConsoleModel.graphData.datasets[0].data.push(data[item].requests);
-                    bookingConsoleModel.graphData.datasets[1].data.push(data[item].confirmed);                  	
-                  }
-
-                  bookingConsoleView.update('data_available');
-              }
-          });
-
-     }
-
-  };
-
-  bookingConsoleController = {
-
-  };
-
-  bookingConsoleView = {
-
-     ctx : null,
-     chart: null,
-
-     init : function() {
-     	this.ctx = document.getElementById("booking_graphic").getContext("2d");
-     },
-
-     update: function(status) {
-
-        switch(status) {
-        	case 'data_available':
-        	  this.chart = new Chart(this.ctx).Bar(bookingConsoleModel.graphData);
-        	  $("#booking_data").html(tmpl('booking_data_table', {data: bookingConsoleModel.result}));
-        	  break;
-        }
-
-       
-     }
-
-  };
-
-  bookingConsoleView.init();
-  bookingConsoleModel.loadData();
-
-});
+<%= partial('pickedup_bookings.js'.to_sym) %>
+<%= partial('returned_bookings.js'.to_sym) %>
